# antropy_farm_gateway

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: mock_lora_input.csv  settings.json
data/: antropy_gateway.db
include/antropy_farm_gateway/: grpc_client.hpp  lora_receiver.hpp  metrics.hpp  optimizer.hpp  ring_buffer.hpp  service.hpp  settings.hpp  sqlite_store.hpp  types.hpp
proto/: sensors_interface.proto
scripts/: docker-start.sh  docker-stop.sh
src/: grpc_client.cpp  lora_receiver.cpp  main.cpp  metrics.cpp  optimizer.cpp  ring_buffer.cpp  service.cpp  settings.cpp  sqlite_store.cpp
